--- a/src/Messages/mess.css
+++ b/src/Messages/mess.css
@@ -1,3 +1,21 @@
+::-webkit-scrollbar {
+    width: 12px;
+  }
+  
+  ::-webkit-scrollbar-track { 
+    border: none;
+    background: var(--dim-light);
+  }
+   
+ 
+  ::-webkit-scrollbar-thumb {
+    background: rgb(75, 75, 214); 
+    border-radius: 10px;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgb(83, 83, 211); 
+  }
 .message{
     position: fixed;
     top: 0;
@@ -167,10 +185,8 @@
 .chat-flow{
     display: flex;
     flex-direction: column-reverse;
-    transform: translateY(100px);
-    /* transform: translateY(00px);
-    height: 400px; */
-    height: 500px;
+    transform: translateY(40px);
+    height: 580px;
     overflow-y: scroll;
 }
 .speakers{
@@ -219,7 +235,7 @@
 .chat-inputs{
     width: 100%;
     height:68px;
-    transform: translateY(125px);
+    transform: translateY(45px);
     display: flex;
     border-top: 0.7px solid rgb(156, 156, 156);
    align-items: center;
