--- a/src/Home/side.css
+++ b/src/Home/side.css
@@ -40,6 +40,7 @@
     align-items: center;
     justify-content: center;
     border: none;
+    z-index: 3;
     border-radius: 20px;
 }
 .input-search input{
@@ -238,4 +239,33 @@
         font-size: 1.3em;
         transform: translateX(-5px);
     }
+}
+/* for results */
+
+.input-search:focus-within{
+    width: 100%;
+}
+.input-search:focus-within ~ .bell{
+    opacity: 0;
+    display: none;
+}
+
+.input-search input:focus-within{
+    z-index: 2;
+    width: 300px;
+}
+.input-search:focus-within ~ .results{
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    width:373px;
+    padding: 30px 10px 10px 10px;
+    background-color: #fff;
+    top: 75px;
+    right: 7%;
+    border-radius: 0px 0px 20px 20px;
+}
+.results{
+    display: none;
 }
