--- a/src/Home/side.css
+++ b/src/Home/side.css
@@ -242,7 +242,7 @@
         transform: translateX(-5px);
     }
 }
-/* for results */
+
 
 .input-search:focus-within{
     width: 100%;
@@ -256,7 +256,7 @@
     z-index: 2;
     width: 300px;
 }
-.input-search input:focus-within ~ .results{
+ .results{
     z-index: 1;
     display: flex;
     flex-direction: column;
