--- a/src/Home/side.css
+++ b/src/Home/side.css
@@ -40,7 +40,7 @@
     align-items: center;
     justify-content: center;
     border: none;
-    z-index: 3;
+    z-index: 1;
     border-radius: 20px;
     transition: all 1s;
 }
@@ -245,26 +245,55 @@
 
 
 .input-search:focus-within{
-    width: 100%;
+    width: 70%;
 }
-.input-search:focus-within ~ .bell{
+.input-search1:focus-within ~ .bell{
     opacity: 0;
     display: none;
 }
+.input-search1:focus-within ~ .results{
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    width:95%;
+    padding: 30px 10px 10px 10px;
+    background-color: #fff;
+    top: 75px;
+    right: 1%;
+    border-radius: 0px 0px 20px 20px;
+}
+.input-search1{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
 
-.input-search input:focus-within{
-    z-index: 2;
-    width: 300px;
+.input-search1 input{
+    outline: none;
+    border: 1px solid #ccc;
+}
+.input-search1 input:focus{
+    box-shadow: 0 0 5px rgba(81, 203, 238, 1);
+  border: 1px solid rgba(81, 203, 238, 1);
+    outline: none;
 }
  .results{
     z-index: 1;
     display: flex;
     flex-direction: column;
     position: absolute;
-    width:373px;
+    width:95%;
     padding: 30px 10px 10px 10px;
     background-color: #fff;
-    top: 75px;
-    right: 7%;
-    border-radius: 0px 0px 20px 20px;
+    top: 50px;
+    right: 1%;
+    border-radius: 20px 20px 20px 20px;
+}
+#close{
+    position: absolute;
+    font-size: 1.1em;
+    top: 10%;
+    right: 90%;
 }
