--- a/src/SignUp/signup.css
+++ b/src/SignUp/signup.css
@@ -92,6 +92,7 @@ input[type=submit]:hover{
   align-items: center;
   justify-content: space-between;
   width: 240px;
+  white-space: nowrap;
 }
 .alt a{
   text-decoration: none;
