--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,34 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito&family=Open+Sans&family=Poppins:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Poppins:wght@300&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-weight: 500;
+  font-family: 'Open Sans', sans-serif;
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Nunito', sans-serif;/* 
-     font-family: 'Open Sans', sans-serif; */
 }
 :root {
-  --primary-color: #2E2C38;
-  --blue-color: #2E4B9C;
+  --primary-color: #2e2c38;
+  --blue-color: #2e4b9c;
   --black-color: #000;
-  --dim-black-color:#5F6476;
-  --icon-color: #5F6476;
+  --dim-black-color: #5f6476;
+  --icon-color: #5f6476;
   --icon-hover: #fff;
   --ligth-color: #fff;
   --dim-light: #edf1f8;
 }
-.dark-theme{
+.dark-theme {
   --primary-color: #2c2c2c;
-  --blue-color: #2E4B9C;
+  --blue-color: #2e4b9c;
   --black-color: #fff;
-  --dim-black-color:#edf1f8;
+  --dim-black-color: #edf1f8;
   --ligth-color: #000;
   --dim-light: #131313;
 }
-body{
+body {
   background: var(--primary-color);
 }
-.main-container{
+.main-container {
   display: flex;
   background-color: var(--primary-color);
   top: 0;
