--- a/src/Home/side.css
+++ b/src/Home/side.css
@@ -7,6 +7,10 @@
     justify-content: center;
     top: 0;
 }
+.toggle{
+    position: absolute;
+    display: none;
+}
 .side-view{
     overflow-y: scroll;
     display: flex;
@@ -51,6 +55,7 @@
     outline: none;
     font-size: 1.2em;
     border:none;
+    cursor: text;
     background: transparent;
 } 
 .bx-search{
@@ -216,8 +221,10 @@
 }
 @media screen and (max-width: 1300px) {
     .side-view{
-        /* display: none; */
         width: 35%;
+    }
+    .activity{
+        padding: 10px 40px;
     }
     .input-search{
         width: 200px;
@@ -227,7 +234,16 @@
     }
 }
 @media screen and (max-width: 1040px) {
-   
+    .side{
+        transition: all 0.5s;
+    }
+    .savedcont{
+        grid-template-columns: 1fr;
+    }
+    .contcont:nth-child(4),
+    .contcont:nth-child(3){
+        display: none;
+    }
     .input-search{
         width: 150px;
         transform: translateX(-10px);
@@ -241,28 +257,13 @@
         font-size: 1.3em;
         transform: translateX(-5px);
     }
+    .navlogo img{
+        width: 40%;
+    }
 }
 
 
-.input-search:focus-within{
-    width: 70%;
-}
-.input-search1:focus-within ~ .bell{
-    opacity: 0;
-    display: none;
-}
-.input-search1:focus-within ~ .results{
-    z-index: 1;
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    width:95%;
-    padding: 30px 10px 10px 10px;
-    background-color: #fff;
-    top: 75px;
-    right: 1%;
-    border-radius: 0px 0px 20px 20px;
-}
+
 .input-search1{
     display: flex;
     width: 100%;
@@ -295,5 +296,32 @@
     position: absolute;
     font-size: 1.1em;
     top: 10%;
+    cursor: pointer;
     right: 90%;
+}
+@media screen and (max-width: 900px){
+   
+    .side-view{
+        width: 400px;
+        position: absolute;
+        right: 0;
+    }
+    .main{
+        width: 100%;
+    }
+    .navbar{
+        width: 10%;
+    }
+    .main-side{
+        width: 90%;
+    }
+    .toggle{
+        display: flex;
+        top: 3%;   
+        font-size: 1.6em;
+        color: var(--blue-color);
+        cursor: pointer;
+        right: 2%;
+        z-index: 999;
+    }
 }
