--- a/src/Messages/mess.css
+++ b/src/Messages/mess.css
@@ -1,319 +1,382 @@
 ::-webkit-scrollbar {
-    width: 12px;
-  }
-  
-  ::-webkit-scrollbar-track { 
-    border: none;
-    background: var(--dim-light);
-  }
-   
- 
-  ::-webkit-scrollbar-thumb {
-    background: rgb(98, 98, 99); 
-    border-radius: 10px;
-  }
-  
-  ::-webkit-scrollbar-thumb:hover {
-    background: rgb(67, 67, 68); 
-  }
-  .m-mes{
+  width: 12px;
+}
 
-  }
-.m-mes{
-   /*  position: fixed;
+::-webkit-scrollbar-track {
+  border: none;
+  background: var(--dim-light);
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(98, 98, 99);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(67, 67, 68);
+}
+
+.m-mes {
+  /*  position: fixed;
     top: 0;
     right: 0; */
-    display: flex;
-    /* flex-direction: row; */
-    position: relative;
-    right: 0;
-    height: 100vh;
-    z-index: 11;
-    width: 100%;
-    background-color: var(--ligth-color);
-    border-radius: 59px 0px 0px 0px ;
-    align-items: flex-start;
-    justify-content: flex-start;
+  display: flex;
+  /* flex-direction: row; */
+  position: relative;
+  right: 0;
+  height: 100vh;
+  z-index: 11;
+  width: 100%;
+  background-color: var(--ligth-color);
+  border-radius: 59px 0px 0px 0px;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
- .message{
-    overflow: hidden;
-     display: flex;
-     width: 95%;
-     height: 100vh;
- }
-.simple-m{
-    border-radius: 59px 0px 0px 0px ;
-    width: 30%;
-    background-color: var(--ligth-color);
-    display: flex;
-    height: 100vh;
-    flex-direction: column;
+.message {
+  overflow: hidden;
+  display: flex;
+  width: 95%;
+  height: 100vh;
 }
-.simple-view{
-    margin-top: 30px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
+.simple-m {
+  border-radius: 59px 0px 0px 0px;
+  width: 30%;
+  background-color: var(--ligth-color);
+  display: flex;
+  height: 100vh;
+  flex-direction: column;
 }
-.chat-title{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 10px;
+.simple-view {
+  margin-top: 30px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
-.chat-title p{
-    font-size: 2em;
-    transform: translateY(5px);
-    color: var(--black-color);
+.chat-title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 10px;
 }
-.chat-icons{
-    font-size:1.2em;
-    display: flex;
-    align-items: center;
-    /* transform: translateX(-20%); */
+.chat-title p {
+  font-size: 2em;
+  transform: translateY(5px);
+  color: var(--black-color);
 }
-.icon{
-    cursor: pointer;
+.chat-icons {
+  font-size: 1.2em;
+  display: flex;
+  align-items: center;
+  /* transform: translateX(-20%); */
 }
-.chat-icons i{
-    color: var(--black-color);
+.icon {
+  cursor: pointer;
 }
-.chat-icons div{
-    display: flex;
-    text-decoration: none;
-    align-items: center;
-    justify-content: center;
-    margin-left: 4px;
-    width: 40px;
-    height: 40px;
-    border-radius: 30px;
-    background-color: rgb(146, 146, 146);
-    transition: all 0.3s ease;
+.chat-icons i {
+  color: var(--black-color);
 }
-.chat-icons div:hover{
-    background-color: rgb(192, 192, 192);
+.chat-icons div {
+  display: flex;
+  text-decoration: none;
+  align-items: center;
+  justify-content: center;
+  margin-left: 4px;
+  width: 40px;
+  height: 40px;
+  border-radius: 30px;
+  background-color: rgb(146, 146, 146);
+  transition: all 0.3s ease;
 }
-.search-mess{
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    height: 36px;
-    width: 250px;
-    margin: 10px auto;
-    border-radius: 20px;
-    background-color: var(--dim-light);
-    margin-bottom:20px;
+.chat-icons div:hover {
+  background-color: rgb(192, 192, 192);
 }
-.search-mess input{
-    margin-left: 10px;
-    width: 180px;
-    min-width: 100px;
-    border: none;
-    color: var(--black-color);
-    outline: none;
-    background: transparent;
+.search-mess {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  height: 36px;
+  width: 100%;
+  margin: 10px auto;
+  border-radius: 20px;
+  background-color: var(--dim-light);
+  margin-bottom: 20px;
 }
-.mess-cont{
-    display: flex;
-    align-items: center;
-    margin-left: 5px;
+.search-mess input {
+  margin-left: 10px;
+  width: 180px;
+  min-width: 100px;
+  border: none;
+  color: var(--black-color);
+  outline: none;
+  background: transparent;
 }
-.mess-scroll{
-    overflow-y: scroll;
+.mess-cont {
+  display: flex;
+  align-items: center;
+  margin-left: 5px;
 }
-.mess-cont div, .mess-cont div:hover{
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    color: var(--black-color);
+.mess-scroll {
+  overflow-y: scroll;
 }
-.conts-mes p:last-child{
-    color: var(--dim-black);
-    font-size: 0.8em
+.mess-cont div,
+.mess-cont div:hover {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: var(--black-color);
+}
+.conts-mes p:last-child {
+  color: var(--dim-black);
+  font-size: 0.8em;
 }
 .img-mes {
-    margin-top: 10px;
-    width: 50px;
-    border-radius: 30px;
+  margin-top: 10px;
+  width: 50px;
+  border-radius: 30px;
 }
-.img-mes img{
-    width: 100%;
-    border-radius: 30px;
+.img-mes img {
+  width: 100%;
+  border-radius: 30px;
 }
-.conts-mes{
-    display: flex;
-    justify-content: center;
-    line-height: 15px;
-    flex-direction: column;
-    margin: auto 10px;
+.conts-mes {
+  display: flex;
+  justify-content: center;
+  line-height: 15px;
+  flex-direction: column;
+  margin: auto 10px;
 }
-.mess-prev{
-    width:70%;
-    right: 0;
-    height: 864px;
-    background-color: var(--ligth-color);
+.mess-prev {
+  width: 70%;
+  right: 0;
+  height: 864px;
+  background-color: var(--ligth-color);
 }
-.prev-content{
-    display: flex;
-    flex-direction: column;
+.prev-content {
+  display: flex;
+  flex-direction: column;
 }
-.mes-prev-title{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 10px 25px 10px 10px;
-    transform: translateY(40px);
-}
-
-.mes-titl-left, .mes-titl-left img{
-    width: 50px;
-    border-radius: 50px;
-    display: flex;
-    align-items: center;
-}
-#left-title-img-desc{
-    display: flex;
-    align-items: center;
-    height: 21px;
-    justify-content: space-between;
-    margin-left: 10px;
-    flex-direction: column;
-}
-#left-title-img-desc p{
-    line-height: 2px;
-}
-#left-title-img-desc div{
-    text-decoration: none;
-    color: var(--black-color);
-}
-#hour-left{
-    color: var(--dim-black-color);
-}
-.mes-title-left-ico{
-    display: flex;
-}
-.mes-title-left-ico i{
-    color: var(--dim-black-color);
-}
-.chat-flow{
-    display: flex;
-    flex-direction: column-reverse;
-    transform: translateY(40px);
-    height: 580px;
-    overflow-y: scroll;
-}
-.speakers{
-    display: flex;
-    flex-direction: column;
-    margin: 0 20px;
+.mes-prev-title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 10px 25px 10px 10px;
+  transform: translateY(40px);
 }
 
-.speaker1{
-    display: flex;
-    align-items: center;
-    padding: 5px 0;
-    justify-content: flex-end;
+.mes-titl-left,
+.mes-titl-left img {
+  width: 50px;
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
 }
-.sp2-img{
-    width: 30px;
-    border-radius:30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+#left-title-img-desc {
+  display: flex;
+  align-items: center;
+  height: 21px;
+  justify-content: space-between;
+  margin-left: 10px;
+  flex-direction: column;
 }
-.speaker2{
-    display: flex;
-    align-items: center;
+#left-title-img-desc p {
+  line-height: 2px;
 }
-#samptext{
-    color: white;
-    margin: 10px 20px;
-    padding: 5px 10px;
-    background-color: rgb(136, 136, 136);
-    border-radius: 20px;
-} 
-#samptext1{
-    color: white;
-    padding: 5px 10px;
-    background-color: blue;
-    border-radius: 20px;
+#left-title-img-desc div {
+  text-decoration: none;
+  color: var(--black-color);
 }
-.sp2-img img{
-    width: 30px;
+#hour-left {
+  color: var(--dim-black-color);
 }
-
-.speaker2-info{
-    display: none;
+.mes-title-left-ico {
+  display: flex;
 }
-.messform{
-    display: flex;
-    align-items: center;
-    margin-right: 10px;
+.mes-title-left-ico i {
+  color: var(--dim-black-color);
 }
-.chat-inputs{
-    width: 100%;
-    height:68px;
-    transform: translateY(45px);
-    display: flex;
-    border-top: 0.7px solid rgb(156, 156, 156);
-   align-items: center;
-   padding: 0px 20px;
+.chat-flow {
+  display: flex;
+  flex-direction: column-reverse;
+  transform: translateY(40px);
+  height: 580px;
+  overflow-y: scroll;
+}
+.speakers {
+  display: flex;
+  flex-direction: column;
+  margin: 0 20px;
 }
 
-#file-input{
-    display: none;
+.speaker1 {
+  display: flex;
+  align-items: center;
+  padding: 5px 0;
+  justify-content: flex-end;
 }
-.inputs-icon{
-    display: flex;
+.sp2-img {
+  width: 30px;
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.bl{
-    font-size: 1.5em;
-    color: rgb(18, 70, 238);
-    cursor: pointer;
+.speaker2 {
+  display: flex;
+  align-items: center;
 }
-.input-m{
-    width: 70%;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    background-color: var(--dim-light);
-    border-radius: 30px;
+#samptext {
+  color: white;
+  margin: 10px 20px;
+  padding: 5px 10px;
+  background-color: rgb(136, 136, 136);
+  border-radius: 20px;
 }
-.input-m input{
-    /* width: 850px; */
-    width: 100%;
-    min-width: 250;
-    margin-left:10px;
-    outline: none;
-    border: none;
-    background: transparent;
-    color: var(--black-color);
+#samptext1 {
+  color: white;
+  padding: 5px 10px;
+  background-color: blue;
+  border-radius: 20px;
 }
-.bxs-smile{
-    font-size: 1.5em;
-    margin-left: 3px;
+.sp2-img img {
+  width: 30px;
 }
-.fa-thumbs-up{
-    font-size: 1.1em;
-    transform: translateX(10px);
-    color: rgb(31, 85, 202);
+
+.speaker2-info {
+  display: none;
 }
-.bxs-send{
+.messform {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  margin-right: 10px;
+}
+.chat-inputs {
+  width: 100%;
+  height: 68px;
+  transform: translateY(45px);
+  display: flex;
+  border-top: 0.7px solid rgb(156, 156, 156);
+  align-items: center;
+  padding: 0px 20px;
+}
+
+#file-input {
+  display: none;
+}
+.inputs-icon {
+  display: flex;
+}
+.bl {
+  font-size: 1.5em;
+  color: rgb(18, 70, 238);
+  cursor: pointer;
+}
+.input-m {
+  width: 78%;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  background-color: var(--dim-light);
+  border-radius: 30px;
+}
+.input-m input {
+  /* width: 850px; */
+  width: 100%;
+  min-width: 250;
+  margin-left: 10px;
+  outline: none;
+  border: none;
+  background: transparent;
+  color: var(--black-color);
+}
+.bxs-smile {
+  font-size: 1.5em;
+  margin-right: 6px;
+}
+.fa-thumbs-up {
+  font-size: 1.1em;
+  transform: translateX(10px);
+  color: rgb(31, 85, 202);
+}
+.bxs-send {
   font-size: 1.1em;
   margin-left: 3px;
 }
-.send-li{
-    display: flex;
-    align-items: center;
+.send-li {
+  display: flex;
+  align-items: center;
 }
-.send-li button{
-    display: flex;
-    align-items: center;
-    padding: 3px 6px;
-    transform: translate(30%, 0%);
-    color: rgb(255, 255, 255);
-    background-color: rgb(31, 85, 202);
-    border: none;
-    cursor: pointer;
-    border-radius: 4px;
+.send-li button {
+  display: flex;
+  align-items: center;
+  padding: 3px 6px;
+  transform: translate(30%, 0%);
+  color: rgb(255, 255, 255);
+  background-color: rgb(31, 85, 202);
+  border: none;
+  cursor: pointer;
+  border-radius: 4px;
+}
+@media screen and (max-width: 820px) {
+  .chat-title {
+    flex-direction: column;
+  }
+  .search-mess {
+    width: 100%;
+    padding-right: 3px;
+  }
+  .search-mess input {
+    width: 60px;
+    transform: translateX(-10px);
+  }
+}
+@media screen and (max-width: 650px) {
+  .mess-prev {
+    display: none;
+  }
+  .message {
+    width: 85%;
+  }
+  .navbar {
+    width: 60px;
+  }
+  .nav-contents {
+    width: 60px;
+  }
+  .simple-m {
+    width: 100%;
+  }
+  .search-mess {
+    width: 80%;
+  }
+  .search-mess input {
+    width: 80%;
+  }
+  .mess-cont {
+    justify-content: center;
+    padding: 0 20px;
+  }
+  .conts {
+    margin-top: 0;
+    padding: 2px 20px;
+    border-radius: 60px;
+    width: 100%;
+    justify-content: space-between;
+    background-color: #bbbcbe;
+  }
+  .conts-mes {
+    margin-top: auto;
+    width: 100%;
+  }
+  .mess-cont:hover {
+    background-color: #fff;
+  }
+  .img-mes {
+    margin-top: auto;
+    width: 100px;
+  }
+  .img-mes img {
+    width: 60px;
+  }
 }
