--- a/src/SignUp/signup.css
+++ b/src/SignUp/signup.css
@@ -41,13 +41,13 @@ img{
   cursor: pointer;
   align-items: center;
   justify-content: center;
- background-color: #2403fde8;
+ /* background-color: #2403fde8; */
   border-radius: 5px;
   padding: 3px 7px;
   transition: all 0.3s;
 
 }
-input[type=submit]:hover{
+.signsub:hover{
   cursor: pointer;
   background: #2403fde8;
 }
