--- a/src/Home/side.css
+++ b/src/Home/side.css
@@ -19,7 +19,7 @@
     top: 0;
     width: 29%;
     height: 100%;
-    border-radius: 60px 0px 0px 0px;
+    border-radius: 16px;
     background-color: var(--dim-light);
     z-index: 6;
     position:fixed;
