--- a/src/settings/settings.css
+++ b/src/settings/settings.css
@@ -23,3 +23,16 @@
 .del{
   display: flex;
 }
+
+@media screen and (max-width: 700px){
+  .set-cont{
+    flex-direction: column;
+    align-items: center;
+  }
+  .s-left{
+    width: 100%;
+  }
+  .set-view{
+    justify-content: space-between;
+  }
+}
