--- a/src/account-page/account.css
+++ b/src/account-page/account.css
@@ -38,3 +38,8 @@
   .uplog label{
     color: var(--black-color)
   }
+  .f-fol{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-auto-columns: 1fr;
+  }
