--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -3,6 +3,14 @@ body{
     
     background: var(--primary-color);
 }
+.post-div-holder{
+    z-index: 100;
+    width: 100%;
+    height: 100%;
+    border-radius: 2em;
+    background-color: rgba(0, 0, 0, 0.279);
+    display: none;
+}
 .main-container{
     display: flex;
     background-color: var(--primary-color);
@@ -277,7 +285,8 @@ body{
 .post{
     display: flex;
     flex-direction: column;
-    width: 100%;;
+    width: 40%;
+    height: 50%;
     align-items: center;
     margin-top: 20px;
     justify-content: space-between;
