--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -3,14 +3,6 @@ body{
     
     background: var(--primary-color);
 }
-.post-div-holder{
-    z-index: 100;
-    width: 100%;
-    height: 100%;
-    border-radius: 2em;
-    background-color: rgba(0, 0, 0, 0.279);
-    display: none;
-}
 .main-container{
     display: flex;
     background-color: var(--primary-color);
@@ -285,8 +277,7 @@ body{
 .post{
     display: flex;
     flex-direction: column;
-    width: 40%;
-    height: 50%;
+    width: 100%;;
     align-items: center;
     margin-top: 20px;
     justify-content: space-between;
