--- a/src/Messages/mess.css
+++ b/src/Messages/mess.css
@@ -226,9 +226,9 @@
 }
 #samptext {
   color: white;
-  margin: 10px 20px;
+  margin: 4px 0;
   padding: 5px 10px;
-  background-color: rgb(136, 136, 136);
+  background-color: rgb(70, 69, 69);
   border-radius: 20px;
 }
 #samptext1 {
