--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -75,17 +75,8 @@ body{
     width: 95%;
     z-index: 10;
     display:flex;
-    height: 1000px;
     background-color: var(--ligth-color);
 }
-/* hr{
-   height: 2px;
-   background-color: var(--primary-color);
-   display: flex;
-   align-items: center;
-   border-radius: 10px;
-} */
-/* hides the checkbox */
 #heart {
     display: none;
   }
@@ -191,6 +182,10 @@ body{
 .time-item{
     height:50px;
 }
+.post {
+    position: sticky;
+    top: 0;
+}
 .t-link{
     color: var(--black-color);
     display: flex;
@@ -205,16 +200,6 @@ body{
     cursor: pointer;
 }
 
-.contents{
-    display: flex;
-    flex-flow: column wrap;
-    align-items: left;
-    justify-content: center;
-    width: 80%;
-    box-sizing: border-box;
-    padding: 10px;
-    margin: 10px;
-}
 .cont-cont{
     display: flex;
     align-items: center;
@@ -229,6 +214,11 @@ body{
     animation-duration: 3s;
     cursor: pointer;
 }
+.postcard{
+    background-color: var(--post-color);
+    border: 1px solid rgba(170, 166, 166, 0.539);
+}
+
 .cont-desc{
     width: 100%;
     display: flex;
