--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -10,14 +10,13 @@ body{
 }
 .navlogo{
     z-index: 2;
-    
     align-items: center;
     justify-content: center;
 }
 
 .navlogo img {
     margin: 30px auto;
-    width: 40px;
+    width: 60px;
     z-index: 2;
     cursor: pointer;
 }
@@ -373,4 +372,53 @@ body{
 }
 .img-file{
     display: none;
+}
+@media screen and (max-width: 700px) {
+    .navbar{
+        flex-direction: row;
+        position: sticky;
+        top: 0;
+        height: 80px;
+        width: 100%!important;
+        border-bottom: 1px solid rgb(169, 165, 165);
+    }
+    .main-container{
+        flex-direction: column;
+    }
+    .nav-contents{
+        display: flex;
+        flex-direction: row;
+        position: relative;
+        height: 80px;
+        width: 100%!important;
+        justify-content: space-between;
+        padding: 0 30px;
+    }
+    .nav-container{
+        font-size: large;
+        flex-direction: row;
+        align-items: center;
+        margin: 0;
+        margin: 0 auto;
+        /* width: 100%; */
+    }
+    .navlinks:not(:last-child){
+        margin: 0;
+        margin-left: 30px;
+    }
+    .navlinks:last-child{
+        margin: 0;
+    }
+    .navlogo{
+        width: 60px;
+    }
+    .main-side{
+        margin: 0 auto;
+        /* background: transparent; */
+        width: 100% !important;
+    }
+    .main-contents{
+        margin-top: 20px;
+    }
+ 
 }
