--- a/src/Messages/mess.css
+++ b/src/Messages/mess.css
@@ -143,7 +143,6 @@
   justify-content: center;
   line-height: 15px;
   flex-direction: column;
-  margin: auto 10px;
 }
 .mess-prev {
   width: 70%;
@@ -337,7 +336,8 @@
     display: none;
   }
   .message {
-    width: 85%;
+    width: 100%;
+    padding: 0 10px;
   }
   .simple-m {
     width: 100%;
@@ -355,8 +355,10 @@
   .conts {
     margin-top: 0;
     padding: 2px 20px;
-    border-radius: 60px;
-    width: 90%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    height: 10vh;
     background-color: var(--primary-color);
     cursor: pointer;
   }
@@ -365,11 +367,13 @@
   }
   
   .img-mes {
-    margin-top: auto;
-    width: 100px;
+    width: 90px;
   }
   .img-mes img {
-    width: 60px;
+    width: 50px;
+  }
+  .chat-title{
+    flex-direction: row;
   }
 }
 
