--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito&family=Open+Sans&family=Poppins:wght@300&display=swap');
 
+@font-face {
+  font-family: Source;
+  src: url(./fonts/SourceSansPro-Regular.ttf);
+}
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   /* font-weight: 500; */
-  font-family: 'Roboto',
-    sans-serif;
+  font-family: Source;
 
 }
 
