--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -28,7 +28,7 @@ body{
     height: 100vh;
 }
 .nav-contents{
-    position: fixed; 
+    /* position: fixed;  */
     align-items: center;
     justify-content: center;
     width: 5%;
