--- a/src/Home/side.css
+++ b/src/Home/side.css
@@ -2,13 +2,12 @@
     display: flex;
     flex-direction: column;
     width: 35%;
-    /* background-color: var(--ligth-color); */
     align-items: center;
     justify-content: center;
     top: 0;
+    height: 100vh;
 }
 .toggle{
-    /* position: fixed; */
     display: none;
 }
 .side-view{
@@ -21,6 +20,7 @@
     background-color: var(--ligth-color);
     z-index: 6;
     justify-content: space-between;
+    height: 100vh;
 }
 .topside{
     top: 0;
