--- a/src/SignUp/signup.css
+++ b/src/SignUp/signup.css
@@ -1,172 +1,9 @@
 
-h1{
-  font-size: 1.2em;
-}
-img{
-  width: 80%;
-}
-
-.labels{
-  width: 400px;
-  margin-top: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-}
-.labels input{
-  width: 300px;
-  height: 35px;
-  border-radius: 3px;
-  text-align: center;
-  font-size: 1.1em;
-  outline: none;
-  color:rgb(0, 0, 0);
-}
-.button input[type=submit]{
-  color: white;
-  display: flex;
-  font-size: 1.2em;
-  text-align: center;
-  cursor: pointer;
-  align-items: center;
-  justify-content: center;
- background-color: #190692e8;
-  border-radius: 5px;
-  padding: 3px 7px;
-  transition: all 0.3s;
-
-}
-.signsub:hover{
-  cursor: pointer;
-  background: #2403fde8;
-}
-.labels label{
-  font-size: 1.1em;
-}
-/* .labels input:focus{
-  box-shadow: 0 0 5px rgba(81, 203, 238, 1);
-  border: 1px solid rgba(81, 203, 238, 1);
-} */
-
-.button{
-  margin-top: 20px;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.button div input{
-  width: 100%;
-  height: 30px;
-  border-radius: 4px;
-  border: none;
-  color: #fff;
-  font-size: 1.2em;
-  outline: none;
-  background: #4a2ff7e8;
-  transition: all 0.3s;
-  /* background: linear-gradient(90deg, rgba(70,5,222,1) 43%, rgba(5,162,222,1) 79%, rgba(0,95,255,1) 100%); */
-}
-.button div input:hover{
-  cursor: pointer;
-  background: #2403fde8;
-  transform: scale(1.1);
-}
-.alt{
-  display: flex;
-  margin-top: 10px;
-  align-items: center;
-  justify-content: space-between;
-  width: 240px;
-  white-space: nowrap;
-}
-.alt a{ 
-  transition: all 0.3s;
-  text-decoration: none;
-}
-.alt a:hover{
-  color: rgb(23, 27, 255);
-}
-.label{
-  display: flex;
-  margin-top: 10px;
-  justify-content: center;
-  align-items: center;
-  width: 400px;
-}
-.label label{
-  margin-left: 10px;
-}
-.label input{
-  transform: scale(1.2);
-  color: #fff;
-}
-.alt1{
-  transition: all 0.3s;
-  margin-top: 10px;
-}
-.alt1 a{
-  transition: all 0.3s;
-  text-decoration: none;
-}
-.alt1 a:hover{
-  color: rgb(23, 27, 255);
-}
-
-.css-1idz92c-MuiCircularProgress-svg{
-  transform: scale(0.5);
-}
-.active{
-  opacity: 0;
-}
-
 .loback{
-  /* background: repeating-radial-gradient(circle at left bottom, #b6b397 20px, #4b5add 20px) */
   background: radial-gradient(
   circle at bottom left,
-  #0c13816e 20%,
-  #4b026f 20%,
-  #0e0349cc 90%
+  #dedfecf8 20%,
+  #ffffff 20%,
+  #ffffff 90%
 );
-}
-.forform{
-  background: rgba(5, 7, 15, 0.363);
-}
-.inmaterial label{
-  color: #fff;
-}
-.inmaterial label span{
-  display: none;
-  width: 0;
-  margin: 0;
-  padding: 0;
-}
-.inmaterial{
-  width: 70%;
-  border-bottom: solid 1px #fff;
-}
-.inmaterial div input{
-  color: #fff;
-  height: 15px;
-}
-.inmaterial div{
-  color:#fff;
-}
-.MuiInput-underline input{
-  border-bottom: 2px solid var(--black-color)
-}
-.MuiInput-underline input{
-  border-bottom: 2px solid var(--black-color);
-  z-index: 0;
-}
-.inlog input::placeholder,
-.insign input::placeholder{
-  font-size: 0.8em;
-}
-.inlog{
-  margin-top: 20px!important;
-}
-.insign{
-  margin-top: 15px!important;
 }
