--- a/client/src/Messages/style.css
+++ b/client/src/Messages/style.css
@@ -5,11 +5,11 @@
     box-shadow: 0 0 4px 4px rgba(19, 148, 218, 0.324);
 }
 .mess{
-    border-radius: 0px 10px 10px 10px;
+    border-radius: 20px;
 }
 .mess1{
-    border-radius: 10px 10px 0px 10px;
-    background: #A9DBF8;
+    border-radius: 20px;
+    background: #3b62e6;
 ;
 }
 ::-webkit-scrollbar {
@@ -28,11 +28,12 @@
 ::-webkit-scrollbar-thumb:hover {
     background: rgb(140, 143, 145);
 }
-.ref div{
-    /* display: flex;
-    flex-direction: column;
-    justify-content: flex-end; */
+.ref>div{
+    display: flex;
+    flex-direction: column-reverse;
+    /* justify-content: flex-end; */
     /* height: 100%; */
+    /* height: 30vh; */
     overflow-y: auto;
 }
 .mdiv1{
@@ -52,4 +53,11 @@
 .messages{
     /* background: url(./../../images/cover-sign.png); */
     background: rgba(255, 255, 255, 0.537);
+}
+.rowcont{
+    flex-direction: row!important;
+    justify-content: flex-start!important;
+}
+.rowrev{
+    flex-direction: row-reverse!important;
 }
