--- a/client/src/Home/Home.css
+++ b/client/src/Home/Home.css
@@ -103,7 +103,7 @@ body{
     background-size: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     width: 100%;
     z-index: 2;
     border-bottom: 1px solid hsla(0, 0%, 77%, 0.781);
