--- a/client/src/settings/settings.css
+++ b/client/src/settings/settings.css
@@ -40,7 +40,7 @@ color: black;
     justify-content: space-between;
   }
   .settings{
-    flex-direction: column;
+    height: 100vh;
   }
 }
 @media screen and (max-width: 410px) {
